--- a/RESTAPIWithDB/pom.xml
+++ b/RESTAPIWithDB/pom.xml
@@ -64,6 +64,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.flywaydb</groupId>
+			<artifactId>flyway-core</artifactId>
+			<version>9.8.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
