--- a/RESTAPIWithDB/src/main/resources/application.properties
+++ b/RESTAPIWithDB/src/main/resources/application.properties
@@ -9,4 +9,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
+spring.flyway.baseline-on-migrate=true
+
 spring.mvc.hiddenmethod.filter.enabled=true
