Add liquibase, update pom, REAMDE

--- a/RESTAPIWithDB/pom.xml
+++ b/RESTAPIWithDB/pom.xml
@@ -70,10 +70,11 @@
 			<artifactId>modelmapper</artifactId>
 			<version>3.2.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.liquibase/liquibase-core -->
 		<dependency>
-			<groupId>org.flywaydb</groupId>
-			<artifactId>flyway-core</artifactId>
-			<version>9.8.0</version>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.25.1</version>
 		</dependency>
 	</dependencies>
 
